--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,7 @@ body{
     justify-content: center;
 }
 /* Card */
-.card{
+.listing-card{
     border: none !important;
     margin-bottom: 2rem;
 }
