--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -9,7 +9,7 @@
         <div class="mb-3">
           <label for="title" class="form-label">Title</label>
           <input 
-            name="listing[title]"
+            name="listing[title]" 
             placeholder="Hotel"
             type="text"
             class="form-control"
@@ -69,7 +69,7 @@
           />
           <div class="invalid-feedback">Please enter city</div>
         </div>
-        <button class="btn btn-dark">Add</button>
+        <button class="btn btn-dark add-btn">Add</button>
       </form>
     </div>
   </div>
