--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -17,7 +17,7 @@
   </div>
   <br />
 
-  <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+  <% if(currUser && listing.owner._id.equals(currUser._id)){ %>
   <div class="btns">
     <a href="/listings/<%= listing._id %>/edit" 
       class="btn btn-dark col-1 offset-3 edit-btn">
