--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
       <a class="nav-link nav" href="/listings"><b>Wanderlust</b></a>
-      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-solid fa-font-awesome"></i></a>
       <button class="navbar-toggler"
         type="button" 
         data-bs-toggle="collapse" 
