--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,27 +220,26 @@ body{
 .filter{
   text-align: center;
   margin-right: 3rem;
-  margin-top: 2rem;
-  opacity: 0.5;
+  margin-top: 1rem;
+  opacity: 0.6;
 }
 .filter:hover{
   opacity: 1;
   cursor: pointer;
 }
-.filter p{
-  font-size: 0.7rem;
-}
+
 .tax-info{
   display: none;
 }
+
 .tax-toggle{
-  border: 1px solid;
-  border-radius: 1rem;
-  height: 2rem;
-  /* width: 8rem; */
+  border: 1.3px solid;
+  border-radius: 1.2rem;
+  height: 3rem;
+  width: 9rem;
   margin-top: 1rem;
-  margin-left: 6rem;
+  margin-left: 56rem; 
   padding: 1rem;
   display: flex;
-  align-items: center;
+  align-items:center;
 }
