--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,7 +1,7 @@
 <% layout("/layout/boilerplate") %>
   <body>
     
-    <div id="filters">
+    <!-- <div id="filters">
       <div class="filter">
         <div><i class="fa-solid fa-fire"></i></div>
         <p>Trending</p>
@@ -56,9 +56,18 @@
           <label class="form-check-label" for="flexSwitchCheckDefault">Display tax</label>
         </div>
       </div>
+    </div> -->
+    <div id="filters">
+      <h3 class="filter">All Listings</h3>
+      <div class="tax-toggle">
+        <div class="form-check-reverse form-switch">
+          <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+          <label class="form-check-label" for="flexSwitchCheckDefault">Display tax</label>
+        </div>
+      </div>
     </div>
 
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-1">
     <% for(let listing of allListings) { %>
       
       <a href="/listings/<%= listing._id %>">
