--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,11 +7,11 @@
   <div class="card col-6 offset-3 show-card listing-card">
     <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="<%= listing.title %>" />
     <div class="card-body mt-3">
-      <p class="card-text">Owned by:<i><%= listing.owner.username %></i><br></p>
-      <p class="card-text"><%= listing.description %> <br></p>
-      <p class="card-text">&#8377; <%= listing.price.toLocaleString("en-IN")%> <br></p>
-      <p class="card-text"></p><%= listing.location %> <br></p>
-      <p class="card-text"><%= listing.country %> <br></p>
+      <p class="card-text"><b>Owned by: </b><i><%= listing.owner.username %></i><br></p>
+      <p class="card-text"><b>Description: </b><%= listing.description %> <br></p>
+      <p class="card-text"><b>Price: </b>&#8377; <%= listing.price.toLocaleString("en-IN")%> <br></p>
+      <p class="card-text"></p><b>Location: </b><%= listing.location %> <br></p>
+      <p class="card-text"><b>Country: </b><%= listing.country %> <br></p>
       
     </div>
   </div>
